--- a/src/components/productSlider/productSlider.scss
+++ b/src/components/productSlider/productSlider.scss
@@ -5,6 +5,7 @@
     & .swiper {
         width: 100%;
         padding-bottom: 60px;
+        overflow: visible;
     }
     & .swiper-wrapper {
         z-index: 2;
